--- a/wp-content/plugins/pl-platform/engine/sections/menus/style.css
+++ b/wp-content/plugins/pl-platform/engine/sections/menus/style.css
@@ -1,7 +1,7 @@
-/* PageLines Platform - 5.0.103
-* Built: Thursday, February 4th, 2016, 18:33
-* http://www.pagelines.com
-* Copyright (c) 2016 PageLines; Licensed GPL-3.0 */
+/* PageLines Platform - 5.1.8
+* Built: Thursday, November 16th, 2017, 18:16
+* https://www.pagelines.com
+* Copyright (c) 2017 PageLines; Licensed GPL-3.0 */
 .sn-menus .pl-sn-pad {
   padding: 0;
 }
@@ -20,6 +20,23 @@
   -moz-justify-content: center;
   -ms-justify-content: center;
   justify-content: center;
+}
+.menus-content .pl-mobile-activation {
+  display: none;
+  font-weight: 600;
+  font-size: .9em;
+  padding: .3em 1em;
+}
+.menus-content .pl-mobile-activation .activation-text {
+  opacity: .2;
+}
+.menus-content .pl-mobile-activation .menu-name {
+  margin-left: 3px;
+}
+.menus-content .pl-mobile-activation:hover,
+.menus-content .pl-mobile-activation:active {
+  cursor: pointer;
+  background: rgba(0, 0, 0, 0.04);
 }
 .pl-alignment-left .menus-content {
   -webkit-justify-content: flex-start;
@@ -58,18 +75,52 @@
   justify-content: center;
 }
 .menus-branding {
-  text-align: left;
   margin: 0 1.5em;
 }
 .menus-branding a {
   color: inherit;
-  font-weight: 600;
-  letter-spacing: -0.03em;
 }
 .menus-branding a:hover {
   text-decoration: none;
+}
+.menus-branding a[href]:hover {
   opacity: .7;
 }
-.menus-branding a img {
+.menus-branding img {
   display: block;
+}
+.menus-branding .menus-name {
+  line-height: inherit;
+  margin: 0;
+  font-size: inherit;
+}
+@media (max-width: 768px) {
+  .menus-content {
+    display: block;
+  }
+  .menus-content .menus-branding {
+    padding: .5em 0;
+  }
+  .menus-content .menus-branding a img {
+    display: inline-block;
+  }
+  .menus-content .do-mobile-nav .pl-nav {
+    display: block;
+  }
+  .menus-content .do-mobile-nav .pl-nav > li {
+    display: block;
+  }
+  .menus-content .do-mobile-nav .pl-mobile-activation {
+    display: block;
+  }
+  .menus-content .do-mobile-nav .pl-nav-container {
+    height: 0;
+    opacity: 0;
+    overflow: hidden;
+    transition: opacity 0.5s linear;
+  }
+  .menus-content .do-mobile-nav.pl-mobile-container.toggle-open .pl-nav-container {
+    height: auto;
+    opacity: 1;
+  }
 }
